2001-11-14  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: envelop all {} macros in "do{}while(0)"

2001-11-09  Sam Steingold  <sds@gnu.org>

	* pathname.d (CD): append a slash when the string does not end
	with it (compatibility with CMUCL &al); the original behavior is
	still available as (cd (pathname string))

2001-11-08  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (load-lpt-many): evaluate the definition for
	AllegroCL compatibility

2001-11-07  Sam Steingold  <sds@gnu.org>

	Support CMUCL- and AllegroCL-style logical host loading
	* defs1.lisp (load-lpt-many): new function (AllegroCL-style)
	(load-lpt-one): new function (CMUCL-style)
	(*load-logical-pathname-translations-database*): new user variable
	(load-logical-pathname-translations): use them

2001-11-07  Sam Steingold  <sds@gnu.org>

	* init.lisp (search-file): handle the extension-less situations

2001-11-05  Sam Steingold  <sds@gnu.org>

	* debug.d (read_form): keep calling READ-LINE until a non-empty
	line is supplied; this fixes the C-z RET win32 problem

2001-11-04  Bruno Haible  <haible@clisp.cons.org>

	Interoperability with gcc-3.0 -fuse-cxa-atexit.
	* autoconf/aclocal.m4 (CL_GLOBAL_CONSTRUCTORS): Add test whether
	global destructors actually exist.

2001-11-02  Sam Steingold  <sds@gnu.org>

	* stream.d (check_stream, check_streamtype, check_builtin_stream):
	(check_wr_int, resolve_as_synonym): new macros
	(test_stream_args, test_input_stream_args, SYNONYM-STREAM-SYMBOL)
	(BROADCAST-STREAM-STREAMS, CONCATENATED-STREAM-STREAMS)
	(TWO-WAY-STREAM-INPUT-STREAM, TWO-WAY-STREAM-OUTPUT-STREAM)
	(ECHO-STREAM-INPUT-STREAM, ECHO-STREAM-OUTPUT-STREAM)
	(GENERIC-STREAM-P, bitbuff_ixu_sub, bitbuff_ixs_sub)
	(wr_by_iau8_unbuffered, wr_by_iau8_buffered, TERMINAL-RAW)
	(BUILT-IN-STREAM-OPEN-P, INPUT-STREAM-P, OUTPUT-STREAM-P)
	(BUILT-IN-STREAM-ELEMENT-TYPE, BUILT-IN-STREAM-SET-ELEMENT-TYPE)
	(STREAM-EXTERNAL-FORMAT, SET-STREAM-EXTERNAL-FORMAT)
	(interactive_stream_p, INTERACTIVE-STREAM-P, BUILT-IN-STREAM-CLOSE)